v0.0.9.dev1/_sources/autoapi/dialoguekit/core/annotated_utterance/index.rst.txt
dialoguekit.core.annotated_utterance
====================================

.. py:module:: dialoguekit.core.annotated_utterance

.. autoapi-nested-parse::

   Interface extending utterances with annotations.



Classes
-------

.. autoapisummary::

   dialoguekit.core.annotated_utterance.AnnotatedUtterance


Module Contents
---------------

.. py:class:: AnnotatedUtterance

   Bases: :py:obj:`dialoguekit.core.utterance.Utterance`


   Represents an utterance, with annotations.

   The AnnotatedUtterance is a Utterance with additional information.
   In some cases we want to send an utterance with dialogue acts and/or
   Annotations. Dialogue acts are a specific type of annotation.


   .. py:attribute:: dialogue_acts
      :type:  List[dialoguekit.core.dialogue_act.DialogueAct]
      :value: []



   .. py:attribute:: annotations
      :type:  List[dialoguekit.core.annotation.Annotation]
      :value: []



   .. py:attribute:: metadata
      :type:  Dict[str, Any]


   .. py:method:: get_utterance() -> dialoguekit.core.utterance.Utterance

      Returns the annotated utterance as a utterance.



   .. py:method:: from_utterance(utterance: dialoguekit.core.utterance.Utterance)
      :classmethod:


      Creates an instance of AnnotatedUtterance from an utterance.



   .. py:method:: add_dialogue_acts(dialogue_acts: List[dialoguekit.core.dialogue_act.DialogueAct]) -> None

      Adds dialogue acts to the utterance.

      :param dialogue_acts: List of dialogue acts.



   .. py:method:: get_intents() -> List[dialoguekit.core.intent.Intent]

      Returns utterance's intents.



   .. py:method:: num_dialogue_act_annotations() -> int

      Returns the number of slot-value annotations in dialogue acts.



   .. py:method:: add_annotations(annotations: List[dialoguekit.core.annotation.Annotation]) -> None

      Adds annotations to the utterance.

      :param annotations: List of annotations.



   .. py:method:: get_text_placeholders() -> str

      Replaces the utterance text with placeholders.

      :returns: The utterance text with annotations replaced with placeholders.



